@@ -1,3 +1,9 @@
+globus-common (16.3-1+gt6.@distro@) @distro@; urgency=low
+
+  * Thread pc files dlpreopen and dlopen variables
+
+ -- Globus Toolkit <support@globus.org>  Thu, 07 Apr 2016 10:33:31 -0400
+
 globus-common (16.2-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix missing doxygen comment header
